# grabbr-hops

./: .gitignore  AGENTS.md  Cargo.toml  DOC.md  NOTICE.md  README.md  build.rs  config.toml  flake.nix  install.ps1  install.sh
.claude/skills/preview-gui/: SKILL.md
.github/workflows/: release.yml
crates/hops-cli/: Cargo.toml
crates/hops-cli/src/: lib.rs
crates/hops-frontend-core/: Cargo.toml
crates/hops-frontend-core/src/: lib.rs  theme.rs
crates/hops-gtk/: Cargo.toml
crates/hops-gtk/src/: client_object.rs  lib.rs  macos_status_item.rs  window.rs
crates/hops-gtk/src/client_row/: imp.rs
crates/hops-gtk/src/window/: imp.rs
crates/hops-ipc/src/: lib.rs
crates/hops-proto/src/: lib.rs
crates/hops-slint/: build.rs
crates/hops-slint/examples/: render_onboarding.rs  render_png.rs
crates/hops-slint/src/: lib.rs
crates/hops-slint/ui/: app.slint  onboarding.slint  theme.slint
crates/input-capture/src/: macos.rs
crates/input-capture/src/windows/: event_thread.rs
crates/input-emulation/src/: lib.rs  macos.rs
docs/: SIGNING.md
hops-cli/: Cargo.toml
hops-frontend-core/: Cargo.toml
hops-frontend-core/src/: theme.rs
hops-gtk/: Cargo.toml
hops-gtk/src/: client_row.rs
hops-gtk/src/client_object/: imp.rs
hops-ipc/: Cargo.toml
hops-ipc/src/: lib.rs
hops-proto/: Cargo.toml
hops-slint/: Cargo.toml
hops-slint/src/: lib.rs  macos_app.rs
hops-slint/ui/: app.slint  layout_canvas.slint  tray.slint  widgets.slint
hops-tui/: Cargo.toml
hops-tui/src/: lib.rs
input-capture/: Cargo.toml
input-capture/src/: macos.rs
input-emulation/: Cargo.toml
input-emulation/src/: macos.rs
input-event/: Cargo.toml
lan-mouse-frontend-core/: Cargo.toml
lan-mouse-frontend-core/src/: lib.rs  prefs.rs  theme.rs
lan-mouse-ipc/src/: lib.rs
lan-mouse-proto/src/: lib.rs
lan-mouse-slint/: Cargo.toml
lan-mouse-slint/examples/: render_onboarding.rs  render_png.rs
lan-mouse-slint/src/: lib.rs  macos_status_item.rs
lan-mouse-slint/ui/: app.slint  layout_canvas.slint  onboarding.slint  previews.slint  theme.slint  widgets.slint
lan-mouse-tui/: Cargo.toml
lan-mouse-tui/src/: lib.rs
nix/: README.md  default.nix  hm-module.nix
scripts/: package-macos.sh  provenance.sh  sign-macos.sh
service/: README.md  com.grabbr.hops.plist  hops-headless.service  hops.service
service/windows/: install-hops-daemon.ps1
src/: capture.rs  client.rs  clipboard.rs  config.rs  connect.rs  crypto.rs  dns.rs  emulation.rs  hop_log.rs  lib.rs  listen.rs  main.rs  service.rs  transport.rs
