[workspace]
members = [
    "crates/input-capture",
    "crates/input-emulation",
    "crates/input-event",
    "crates/hops-ipc",
    "crates/hops-cli",
    "crates/hops-gtk",
    "crates/hops-proto",
    "crates/hops-frontend-core",
    "crates/hops-tui",
    "crates/hops-slint",
]

[package]
name = "hops"
description = "Software KVM Switch / mouse & keyboard sharing software for Local Area Networks"
version = "0.11.0"
edition = "2021"
autobins = false
license = "GPL-3.0-or-later"
repository = "https://github.com/jtjones09/grabbr-hops"

# hops: a GPLv3 fork of lan-mouse (attribution preserved in NOTICE/headers). The
# Cargo package, the binary, and the code-signing identity are all `hops`; only
# the wire protocol (ALPN `grabbr-hop/1`) and the on-disk state dir
# (`~/.config/lan-mouse/`) keep their old names, for compatibility. One binary
# does everything: `hops` (front door) / `hops gui` / `hops tui` / `hops daemon`.
[[bin]]
name = "hops"
path = "src/main.rs"

[profile.release]
codegen-units = 1
lto = "fat"
strip = true
panic = "abort"

[build-dependencies]

[dependencies]
input-event = { path = "crates/input-event", version = "0.4.0" }
input-emulation = { path = "crates/input-emulation", version = "0.4.0", default-features = false }
input-capture = { path = "crates/input-capture", version = "0.4.0", default-features = false }
hops-cli = { path = "crates/hops-cli", version = "0.3.0" }
hops-gtk = { path = "crates/hops-gtk", version = "0.3.0", optional = true }
hops-tui = { path = "crates/hops-tui", version = "0.1.0", optional = true }
hops-slint = { path = "crates/hops-slint", version = "0.1.0", optional = true }
hops-frontend-core = { path = "crates/hops-frontend-core", version = "0.1.0", optional = true }
hops-ipc = { path = "crates/hops-ipc", version = "0.3.0" }
hops-proto = { path = "crates/hops-proto", version = "0.3.0" }

toml_edit = { version = "0.22", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
log = "0.4.20"
env_logger = "0.11.3"
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = [
    "io-util",
    "io-std",
    "macros",
    "net",
    "process",
    "rt",
    "sync",
    "signal",
] }
futures = "0.3.28"
clap = { version = "4.4.11", features = ["derive"] }
slab = "0.4.9"
thiserror = "2.0.0"
tokio-util = "0.7.11"
local-channel = "0.1.5"
arboard = { version = "3", default-features = false }
quinn = { version = "0.11", default-features = false, features = [
    "runtime-tokio",
    "rustls-ring",
    "log",
] }
rustls = { version = "0.23.12", default-features = false, features = [
    "std",
    "ring",
    "tls12",
] }
rustls-pki-types = "1"
rustls-pemfile = "2"
rcgen = "0.13.1"
sha2 = "0.10.8"
time = "0.3"
notify = "8.2.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2.148"

[features]
default = [
    "gtk",
    "layer_shell_capture",
    "x11_capture",
    "libei_capture",
    "wlroots_emulation",
    "libei_emulation",
    "rdp_emulation",
    "x11_emulation",
]
gtk = ["dep:hops-gtk"]
tui = ["dep:hops-tui", "dep:hops-frontend-core"]
slint = ["dep:hops-slint", "dep:hops-frontend-core"]
layer_shell_capture = ["input-capture/layer_shell"]
x11_capture = ["input-capture/x11"]
libei_capture = ["input-event/libei", "input-capture/libei"]
libei_emulation = ["input-event/libei", "input-emulation/libei"]
wlroots_emulation = ["input-emulation/wlroots"]
x11_emulation = ["input-emulation/x11"]
rdp_emulation = ["input-emulation/remote_desktop_portal"]

[package.metadata.bundle]
name = "hops"
icon = ["target/icon.icns", "crates/hops-gtk/resources/de.feschber.LanMouse.svg"]
identifier = "com.grabbr.hops"
deb_depends = [ "libadwaita-1-0" ]
osx_info_plist_exts = ["build-aux/macos-lsui-element.plist"]
resources = ["target/menubar-template.png"]
