[package]
name = "hops-proto"
description = "network protocol for hops"
version = "0.3.0"
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/jtjones09/grabbr-hops"

[dependencies]
num_enum = "0.7.2"
thiserror = "2.0.0"
input-event = { path = "../input-event", version = "0.4.0" }
paste = "1.0"
