[package]
name = "hops-slint"
description = "Slint GUI frontend for grabbr-hops / lan-mouse"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/jtjones09/grabbr-hops"

[dependencies]
# `software-renderer-systemfonts` is additive — the real windowed app keeps its
# default backend; the feature adds the CPU font rasterizer so the headless
# `render_png` example (below) can rasterize the embedded TTFs for self-review.
slint = { version = "1.17", features = ["software-renderer-systemfonts"] }
hops-frontend-core = { path = "../hops-frontend-core", version = "0.1.0" }
hops-ipc = { path = "../hops-ipc", version = "0.3.0" }
tokio = { version = "1.32", features = ["rt", "sync", "macros", "time"] }
thiserror = "2.0"
log = "0.4"

[build-dependencies]
slint-build = "1.17"

[dev-dependencies]
image = "0.25"

# Headless render harnesses — dump a window to a PNG so the design can be
# reviewed without a display: `cargo run -p hops-slint --example render_png -- out.png`
[[example]]
name = "render_png"
path = "examples/render_png.rs"

[[example]]
name = "render_onboarding"
path = "examples/render_onboarding.rs"
