[package]
name = "lan-mouse-frontend-core"
description = "Shared frontend core (IPC client + observable app model + theming) for grabbr-hop UIs"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
lan-mouse-ipc = { path = "../lan-mouse-ipc", version = "0.3.0" }
tokio = { version = "1.32.0", features = ["rt", "sync", "macros", "time"] }
futures = "0.3.28"
log = "0.4.20"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
