[package]
name = "lan-mouse-tui"
description = "grabbr-hops terminal UI (Ratatui) — a themeable front-end over the daemon IPC"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
lan-mouse-frontend-core = { path = "../lan-mouse-frontend-core", version = "0.1.0" }
lan-mouse-ipc = { path = "../lan-mouse-ipc", version = "0.3.0" }
ratatui = "0.30"
tokio = { version = "1.32.0", features = ["rt", "sync", "macros", "time"] }
thiserror = "2.0.0"
log = "0.4.20"
